fixed vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -76,17 +76,18 @@ li a{
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
-    position: relative;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+   
 }
 
 
 .full-page .content{
-    position: absolute;
-    bottom: 5%;
-    right: 13%;
-    translate: -50% -50%;
+
     font-weight: 800;
     text-align: center;
+    padding-bottom: 80px;
 }
 
 .full-page p{
